--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.6.5",
+    "@types/papaparse": "^5.3.3",
+    "axios": "^0.27.2",
     "concurrently": "^7.3.0",
+    "csv": "^6.2.0",
     "express": "^4.18.1",
     "md5": "^2.3.0",
+    "papaparse": "^5.3.2",
     "sqlite3": "^5.0.11",
     "typescript": "^4.7.4"
   },
