--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/papaparse": "^5.3.3",
     "axios": "^0.27.2",
     "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
     "csv": "^6.2.0",
     "express": "^4.18.1",
     "md5": "^2.3.0",
@@ -26,6 +27,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "nodemon": "^2.0.19",
     "tsc": "^2.0.4"
   }
